--- a/wiki/bg/Task_Panel.html
+++ b/wiki/bg/Task_Panel.html
@@ -26,7 +26,7 @@
 </p><p>&#1048;&#1084;&#1072; &#1084;&#1085;&#1086;&#1075;&#1086; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1080;&#1079;&#1080;&#1089;&#1082;&#1074;&#1072;&#1090; &#1080;&#1079;&#1073;&#1086;&#1088; &#1085;&#1072; &#1092;&#1080;&#1075;&#1091;&#1088;&#1080; &#1080;&#1083;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;. &#1042; &#1090;&#1072;&#1082;&#1080;&#1074;&#1072; &#1089;&#1083;&#1091;&#1095;&#1072;&#1080; &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1085;&#1072; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080;&#1090;&#1077; &#1097;&#1077; &#1080;&#1079;&#1095;&#1072;&#1082;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077; &#1087;&#1086;&#1076;&#1093;&#1086;&#1076;&#1103;&#1097;&#1080;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1086;&#1090; <a href="../bg/Tree_View.html" title="Tree View/bg">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a> &#1080;&#1083;&#1080; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;&#1072;</a>. &#1050;&#1086;&#1075;&#1072;&#1090;&#1086; &#1087;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080; &#1077; &#1086;&#1090;&#1074;&#1086;&#1088;&#1077;&#1085;, &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1087;&#1088;&#1077;&#1074;&#1082;&#1083;&#1102;&#1095;&#1080;&#1090;&#1077; &#1082;&#1098;&#1084; <a href="../bg/Tree_View.html" title="Tree View/bg">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, &#1079;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;. &#1057;&#1083;&#1077;&#1076; &#1082;&#1072;&#1090;&#1086; &#1090;&#1086;&#1074;&#1072; &#1077; &#1085;&#1072;&#1087;&#1088;&#1072;&#1074;&#1077;&#1085;&#1086;, &#1077; &#1074;&#1098;&#1079;&#1084;&#1086;&#1078;&#1085;&#1086; &#1076;&#1072; &#1089;&#1077; &#1087;&#1088;&#1077;&#1074;&#1082;&#1083;&#1102;&#1095;&#1080; &#1086;&#1073;&#1088;&#1072;&#1090;&#1085;&#1086; &#1082;&#1098;&#1084; &#1087;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;, &#1079;&#1072; &#1076;&#1072; &#1087;&#1088;&#1086;&#1076;&#1098;&#1083;&#1078;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;. &#1055;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1085;&#1072; &#1079;&#1072;&#1076;&#1072;&#1095;&#1080;&#1090;&#1077; &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1089;&#1077; &#1079;&#1072;&#1090;&#1074;&#1072;&#1088;&#1103;, &#1082;&#1072;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1085;&#1077;&#1090;&#1077; &#1074;&#1098;&#1088;&#1093;&#1091; &#1073;&#1091;&#1090;&#1086;&#1085; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">OK</span> &#1080;&#1083;&#1080; &#1073;&#1091;&#1090;&#1086;&#1085; <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Close</span> &#1080;&#1083;&#1080; &#1085;&#1072;&#1090;&#1080;&#1089;&#1085;&#1077;&#1090;&#1077; &#1082;&#1083;&#1072;&#1074;&#1080;&#1096;&#1072; <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">Esc</span>, &#1079;&#1072; &#1076;&#1072; &#1087;&#1088;&#1077;&#1082;&#1088;&#1072;&#1090;&#1080;&#1090;&#1077; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Combo_view_Task_panel_ArchComponent.png&amp;filetimestamp=20190928004925&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Combo_view_Task_panel_ArchComponent.png" decoding="async" width="250" height="333" class="mw-file-element" data-file-width="424" data-file-height="565"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">Task Panel that opens when editing an <a href="../Arch_Component.html" title="Arch Component">Arch Component</a>. The Panel waits for the user to select objects that can be added or subtracted from the component.</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1055;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;, &#1082;&#1086;&#1081;&#1090;&#1086; &#1089;&#1077; &#1086;&#1090;&#1074;&#1072;&#1088;&#1103; &#1087;&#1088;&#1080; &#1088;&#1077;&#1076;&#1072;&#1082;&#1090;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; <a href="../Arch_Component.html" title="Arch Component">Arch Component</a>. &#1055;&#1072;&#1085;&#1077;&#1083;&#1098;&#1090; &#1080;&#1079;&#1095;&#1072;&#1082;&#1074;&#1072; &#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1103;&#1090; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;, &#1082;&#1086;&#1080;&#1090;&#1086; &#1084;&#1086;&#1075;&#1072;&#1090; &#1076;&#1072; &#1073;&#1098;&#1076;&#1072;&#1090; &#1076;&#1086;&#1073;&#1072;&#1074;&#1077;&#1085;&#1080; &#1080;&#1083;&#1080; &#1080;&#1079;&#1074;&#1072;&#1076;&#1077;&#1085;&#1080; &#1086;&#1090; &#1082;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1072;.</p>
 <h2><span class="mw-headline" id="Notes">Notes</span></h2>
 <ul><li>Users migrating from other CAD solutions that use the <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> key as part of their workflow may get different results in FreeCAD. When <span class="key" style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #888888; border-radius: 0.3em; padding: 0px 5px 1px 5px; color:#202122;">ESC</span> is pressed in FreeCAD the Task Panel that has the focus will close. To disable this functionality, please see <a href="../Fine-tuning.html#Escape_key" title="Fine-tuning">Fine tuning</a> and <a href="../Sketcher_Preferences.html#General" title="Sketcher Preferences">Sketcher Preferences</a>.</li></ul>
 <p><br>
@@ -91,15 +91,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124054407
+Cached time: 20260124054530
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.090 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.096 seconds
+Real time usage: 0.147 seconds
 Preprocessor visited node count: 403/1000000
-Post&#8208;expand include size: 32741/2097152 bytes
-Template argument size: 11981/2097152 bytes
+Post&#8208;expand include size: 33031/2097152 bytes
+Template argument size: 12126/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -107,18 +107,18 @@ Unstrip post&#8208;expand size: 2285/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   27.247      1 -total
- 27.59%    7.516      1 Template:Std_Base_navi/bg
- 25.71%    7.006      3 Template:Navigation_menu_2
- 21.30%    5.803      1 Template:Interface_navi/bg
- 14.06%    3.830      1 Template:Userdocnavi/bg
- 10.45%    2.847      1 Template:TOCright
- 10.09%    2.749      2 Template:Caption
-  8.82%    2.402      2 Template:Button
-  4.13%    1.125      3 Template:KEY
+100.00%   42.232      1 -total
+ 34.54%   14.587      1 Template:Interface_navi/bg
+ 24.48%   10.340      1 Template:Std_Base_navi/bg
+ 21.49%    9.075      3 Template:Navigation_menu_2
+ 15.23%    6.434      1 Template:Userdocnavi/bg
+  7.10%    3.000      1 Template:TOCright
+  6.23%    2.632      2 Template:Caption
+  5.44%    2.297      2 Template:Button
+  5.06%    2.137      3 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124054407 and revision id 1743158. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412518-0!canonical and timestamp 20260124054529 and revision id 1743161. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
