--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -6,14 +6,14 @@
 <li><a href="../it/Python_Console.html" class="mw-pt-progress mw-pt-progress--complete" title="Console Python (100% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/Python_Console.html" class="mw-pt-progress mw-pt-progress--complete" title="Konsola Pythona (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="Console Python (11% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="&#1050;&#1086;&#1085;&#1089;&#1086;&#1083;&#1100; Python (11% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/Python_Console.html" class="mw-pt-progress mw-pt-progress--low" title="&#54028;&#51060;&#50028; &#53080;&#49556;(Python console) (0% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p><span id="Introduction"></span>
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
-<p>The <a href="../Python_Console.html" title="Python Console">Python Console</a> is a panel that is part of the FreeCAD <a href="../Interface.html" title="Interface">user interface</a>. It runs an instance of the <a href="../Python.html" title="Python">Python</a> interpreter which can be used to control FreeCAD processes, and create and modify objects and their properties. 
+<p><a class="mw-selflink selflink">&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python</a> &#1077; &#1087;&#1072;&#1085;&#1077;&#1083; &#1095;&#1072;&#1089;&#1090; &#1086;&#1090; <a href="../bg/Interface.html" title="Interface/bg">&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1089;&#1082;&#1080;&#1103; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;</a> &#1085;&#1072;  FreeCAD. &#1058;&#1086;&#1081; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1087;&#1088;&#1077;&#1090;&#1072;&#1090;&#1086;&#1088; &#1085;&#1072; <a href="../Python.html" title="Python">Python</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1079;&#1072; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1088;&#1086;&#1094;&#1077;&#1089;&#1080; &#1074;&#1098;&#1074; FreeCAD &#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077;, &#1080; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080; &#1090;&#1077;&#1093;&#1085;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;. 
 </p><p>It can be made visible/hidden through the <b>View &rarr; Panels &rarr; Python Console</b> drop-down menu.
 </p><p>The Python Console in FreeCAD has basic syntax highlighting, to differentiate, with various styles and colors, comments, strings, numeric values, built in functions, printed text output, and delimiters like parentheses and commas. These properties of the console can be configured in the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console.png&amp;filetimestamp=20190921064541&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console.png" decoding="async" width="600" height="277" class="mw-file-element" data-file-width="779" data-file-height="359"></a></span>
@@ -121,12 +121,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124055431
+Cached time: 20260124055754
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.139 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.123 seconds
 Preprocessor visited node count: 529/1000000
 Post&#8208;expand include size: 31797/2097152 bytes
 Template argument size: 12003/2097152 bytes
@@ -137,19 +137,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   39.293      1 -total
- 22.83%    8.969      1 Template:Std_Base_navi/bg
- 19.70%    7.739      3 Template:Navigation_menu_2
- 19.30%    7.582      1 Template:Interface_navi/bg
- 12.53%    4.923      1 Template:Userdocnavi/bg
-  7.15%    2.808      1 Template:TOCright
-  6.73%    2.646      2 Template:Code
-  6.49%    2.552     11 Template:MenuCommand
-  6.02%    2.364      2 Template:KEY
-  5.85%    2.297      3 Template:Emphasis
+100.00%   33.966      1 -total
+ 27.96%    9.497      1 Template:Std_Base_navi/bg
+ 22.44%    7.622      1 Template:Interface_navi/bg
+ 20.25%    6.877      3 Template:Navigation_menu_2
+ 13.29%    4.514      1 Template:Userdocnavi/bg
+  5.72%    1.944      2 Template:Caption
+  5.71%    1.938     11 Template:MenuCommand
+  5.13%    1.743      2 Template:KEY
+  4.93%    1.674      2 Template:Code
+  4.27%    1.449      3 Template:Emphasis
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124055431 and revision id 1743173. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124055754 and revision id 1743175. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
