--- a/wiki/bg/Python_Console.html
+++ b/wiki/bg/Python_Console.html
@@ -14,7 +14,7 @@
 </p>
 <h2><span id=".D0.92.D1.8A.D0.B2.D0.B5.D0.B4.D0.B5.D0.BD.D0.B8.D0.B5"></span><span class="mw-headline" id="&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;">&#1042;&#1098;&#1074;&#1077;&#1076;&#1077;&#1085;&#1080;&#1077;</span></h2>
 <p><a class="mw-selflink selflink">&#1050;&#1086;&#1085;&#1079;&#1086;&#1083;&#1072;&#1090;&#1072; &#1079;&#1072; Python</a> &#1077; &#1087;&#1072;&#1085;&#1077;&#1083; &#1095;&#1072;&#1089;&#1090; &#1086;&#1090; <a href="../bg/Interface.html" title="Interface/bg">&#1087;&#1086;&#1090;&#1088;&#1077;&#1073;&#1080;&#1090;&#1077;&#1083;&#1089;&#1082;&#1080;&#1103; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;</a> &#1085;&#1072;  FreeCAD. &#1058;&#1086;&#1081; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1087;&#1088;&#1077;&#1090;&#1072;&#1090;&#1086;&#1088; &#1085;&#1072; <a href="../Python.html" title="Python">Python</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1077; &#1080;&#1079;&#1087;&#1086;&#1083;&#1079;&#1074;&#1072; &#1079;&#1072; &#1091;&#1087;&#1088;&#1072;&#1074;&#1083;&#1103;&#1074;&#1072;&#1085;&#1077; &#1085;&#1072; &#1087;&#1088;&#1086;&#1094;&#1077;&#1089;&#1080; &#1074;&#1098;&#1074; FreeCAD &#1080; &#1089;&#1098;&#1079;&#1076;&#1072;&#1074;&#1072;&#1085;&#1077;, &#1080; &#1084;&#1086;&#1076;&#1080;&#1092;&#1080;&#1094;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1080; &#1090;&#1077;&#1093;&#1085;&#1080;&#1090;&#1077; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;. 
-</p><p>It can be made visible/hidden through the <b>View &rarr; Panels &rarr; Python Console</b> drop-down menu.
+</p><p>&#1058;&#1103; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1085;&#1072;&#1087;&#1088;&#1072;&#1074;&#1077;&#1085;&#1072; &#1074;&#1080;&#1076;&#1080;&#1084;&#1072;/&#1089;&#1082;&#1088;&#1080;&#1090;&#1072; &#1095;&#1088;&#1077;&#1079; &#1087;&#1072;&#1076;&#1072;&#1097;&#1086;&#1090;&#1086; &#1084;&#1077;&#1085;&#1102; <b>View &rarr; Panels &rarr; Python Console</b>.
 </p><p>The Python Console in FreeCAD has basic syntax highlighting, to differentiate, with various styles and colors, comments, strings, numeric values, built in functions, printed text output, and delimiters like parentheses and commas. These properties of the console can be configured in the <a href="../Preferences_Editor.html" title="Preferences Editor">Preferences Editor</a>.
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_Python_console.png&amp;filetimestamp=20190921064541&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_Python_console.png" decoding="async" width="600" height="277" class="mw-file-element" data-file-width="779" data-file-height="359"></a></span>
 </p>
@@ -121,12 +121,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124055754
+Cached time: 20260124060438
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.078 seconds
-Real time usage: 0.123 seconds
+CPU time usage: 0.103 seconds
+Real time usage: 0.225 seconds
 Preprocessor visited node count: 529/1000000
 Post&#8208;expand include size: 31797/2097152 bytes
 Template argument size: 12003/2097152 bytes
@@ -137,19 +137,19 @@ Unstrip post&#8208;expand size: 2687/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   33.966      1 -total
- 27.96%    9.497      1 Template:Std_Base_navi/bg
- 22.44%    7.622      1 Template:Interface_navi/bg
- 20.25%    6.877      3 Template:Navigation_menu_2
- 13.29%    4.514      1 Template:Userdocnavi/bg
-  5.72%    1.944      2 Template:Caption
-  5.71%    1.938     11 Template:MenuCommand
-  5.13%    1.743      2 Template:KEY
-  4.93%    1.674      2 Template:Code
-  4.27%    1.449      3 Template:Emphasis
+100.00%   90.149      1 -total
+ 40.73%   36.718      1 Template:Interface_navi/bg
+ 22.09%   19.911      1 Template:Std_Base_navi/bg
+ 18.85%   16.993      3 Template:Navigation_menu_2
+  7.29%    6.568      1 Template:Userdocnavi/bg
+  5.24%    4.721      2 Template:Code
+  4.83%    4.356      3 Template:Emphasis
+  3.93%    3.541      2 Template:KEY
+  3.63%    3.270      1 Template:TOCright
+  3.39%    3.055      6 Template:Incode
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124055754 and revision id 1743175. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412531-0!canonical and timestamp 20260124060437 and revision id 1743181. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
